Bug 1436020 - Disable WebRender profiler UI during readback r=nical